# pytoolkit

./: .flake8  .gitignore  CLAUDE.md  README.md  agents.md  analyze_archived_bugs.py  analyze_complete.py  analyze_outliers.py  config_reports.env  execution_prompt.md  folder-structure.txt  ignored_members.json  implementation_plan_member_charts_improvement.md  implementation_plan_member_evolution_charts.md  implementation_plan_radar_historical_series.md  pyproject.toml  pyrightconfig.json  report_template.j2  report_template.md  requirements.txt  run_reports.sh  setup.sh  static-analysis.datadog.yml
.github/: GITHUB_ACTIONS_SETUP.md  copilot-instructions.md
.github/workflows/: epic-monitoring.yml  issue-duedate-monitoring.yml
config/: observability.yml
docs/: INSTALLATION.md  observability-analysis.md
scripts/: GUIA_RELATORIOS.md  README.md  check_kudos_years.py  config_reports.env  find_slack_user.py  run_reports.sh  run_reports_custom_date.sh  test_issue_monitor.sh  validate_output.py
snapshots/: monitors_2025-W40.json  summary_2025-W40.json
src/: cli_loader.py  config.py  log_config.py  main.py
src/domains/ag-operation/: copy_data.py
src/domains/ag_operation/: config_copy_data.py  copy_data.py
src/domains/circleci/: __init__.py  circleci_analysis_command.py  circleci_command.py  circleci_service.py  pipeline_details_command.py  pipeline_details_service.py
src/domains/github/: github_api_client.py  pr_analysis_command.py  pr_analysis_service.py  pr_external_analysis_command.py  pr_workload_analysis_command.py  pr_workload_analysis_service.py
src/domains/linearb/: __init__.py  available_metrics_command.py  engineering_metrics_command.py  export_report_command.py  knowledge_sharing_metrics_command.py  knowledge_sharing_metrics_service.py  linearb_api_client.py  linearb_service.py  performance_metrics_command.py  teams_command.py
src/domains/personal_communication/: whatsapp_pattern_command.py  whatsapp_pattern_service.py
src/domains/personal_finance/: __init__.py
src/domains/report/: weekly_report_command.py  weekly_report_service.py
src/mcp_server/: Dockerfile  README.md  __init__.py  claude_desktop_config.json  claude_desktop_container.json  claude_desktop_local.json  copilot_config.json  docker-compose.yml  docker_run.sh  http_mcp_server.py  management_mcp_server.py  mcp_config.py  run_mcp_server.sh  server_config.py  validators.py
src/mcp_server/adapters/: __init__.py  adapter_manager.py  base_adapter.py  circleci_adapter.py  jira_adapter.py  linearb_adapter.py  sonarqube_adapter.py
src/mcp_server/models/: __init__.py  base.py  circleci_models.py  jira_models.py  linearb_models.py  sonarqube_models.py
src/mcp_server/prompts/: __init__.py  base_prompt.py  quality_report_prompts.py  quarterly_review_prompts.py  team_performance_prompts.py  weekly_report_prompts.py
src/mcp_server/resources/: __init__.py  base_resource.py  pipeline_resources.py  quality_metrics_resources.py  team_metrics_resources.py  weekly_report_resources.py
src/mcp_server/tools/: __init__.py  circleci_tools.py  jira_tools.py  linearb_tools.py  sonarqube_tools.py
src/utils/: base_command.py  base_processor.py  cache_manager.py  command_manager.py  dependencies.py  dynamodb_manager.py  env_loader.py  error_manager.py  excel.py  excel_manager.py  file_manager.py  jira_assistant.py  jira_manager.py  json.py  json_manager.py  logging_config.py  logging_manager.py  ollama_assistant.py  output_manager.py  string_utils.py  summary_helpers.py
src/utils/api/: __init__.py  cw_catalog_api_client.py
src/utils/cache_manager/: cache_backend.py  cache_manager.py  error.py  file_cache.py
src/utils/command/: base_command.py  command_manager.py  error.py  optional_command.py
src/utils/data/: __init__.py  duckdb_data_validator.py  duckdb_manager.py  dynamodb_manager.py  excel_manager.py  ignored_members.json  json_manager.py
src/utils/error/: base_custom_error.py  error_manager.py  jira_assistant_errors.py
src/utils/http/: __init__.py  rate_limited_client.py
src/utils/jira/: error.py  jira_api_client.py  (+2 more)
(+236 files in other folders)
