[tool.poetry]
name = "PyToolkit"
version = "0.1.0"
description = ""
authors = ["Vitor Mendonça <vitorlm@gmail.com>"]
packages = [{include = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
boto3 = "1.35.67"
botocore = "1.35.67"
certifi = "2024.8.30"
et-xmlfile = "2.0.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
idna = "3.10"
jmespath = "1.0.1"
numpy = "2.1.3"
ollama = "0.4.2"
openpyxl = "3.1.5"
pandas = "2.2.3"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
s3transfer = "0.10.4"
six = "1.16.0"
sniffio = "1.3.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
